[package]
name = "devices"
version = "0.2.0"
edition = "2021"
description = "A cross-platform library for retrieving information about connected devices."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hankjordan/devices"

[dependencies]
cfg-if = "1.0"
lazy_static = "1.4"
regex = "1.7"
widestring = "1.0"
winapi = { version = "0.3", features = ["setupapi", "devpkey", "errhandlingapi"] }